# datalake

./: ._README.md  .gitignore  FluxoDeveloperGit.md  README.md  fluxoGitHub.md  gitHubFluxoDevelop.md
dlake/: .gitignore  README.md  pyproject.toml  temp_bronze_vendas_db1.csv
dlake/src/0_uploadLandzone/: 0_0_landzone.py  0_landzone.py  watdogUpload.py
dlake/src/1_uploadBronze/: 1_2_upsertBronze.py  1_3_uploadBronze.py  1_upsertBronze.py  uploadbronzeMinio.py
dlake/src/2_uploadSilver/: 2_1_upsertSilver.py  2_upsertSilver.py  uploadsilverMinio.py
dlake/src/3_uploadsilverAnaliticsMinio/: 1_uploadAnalitics.py  uploadAnalitics.py
dlake/src/4_uploadgoldMinio/: 1_uploadGold.py  uploadGold.py
dlake/src/dadosFake/: createDbsDuck.py  createDbsFake.py  insertDadosFakes.py
dlake/src/diversos/: extractDados.py  uploadBronze.py  uploadBronze_Silver.py  uploadDlakeBronze.py  uploadLandzone.py  uploadSilverAnalistics.py  uploadlZone_Bronze.py
dlake/src/scheduler/: scheduler_0.sh  scheduler_1.sh  scheduler_2.sh  scheduler_3.sh  scheduler_4.sh
dlake/tests/: testDiversos.ipynb
