[tool.poetry]
name = "dlake"
version = "0.1.0"
description = ""
authors = ["danielcarloss7 <danielcarloss7@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.3"
pandas = "^2.2.3"
faker = "^35.2.0"
pyarrow = "^19.0.0"
fastparquet = "^2024.11.0"
minio = "^7.2.15"
boto3 = "^1.36.11"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
